--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,14 @@
 ::-webkit-scrollbar {
     display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
 }
-
+/* globals.css */
+:root {
+    --font-abril: 'Abril Fatface', serif;
+    --font-inter: 'Inter', sans-serif;
+  }
+  
 html body  {
     background-color: #E6FFFA;
+
     color: #1D4044;
 }
