--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -104,14 +104,55 @@
     margin-top: 50px;
 }
 .customer-logos div {
-    height: fit-content;
-    width: fit-content;
+    height: 200px;
+        width: 200px;
     padding: 20px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 20px;
+    margin-bottom: 100px;
     border-width: 2px;
     border-color: #1D4044;
     border-radius: 100%;
+}
+footer {
+    height: 415px;
+    width: 100%;
+    display: flex;
+    padding-top: 50px;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: start;
+    background-color: #1D4044;
+}
+
+footer .socials,
+.policy,
+.contact {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    color: #B2F5EA;
+    font-size: 30px;
+    justify-content: center;
+}
+
+.policy> :not(:first-child),
+.contact> :not(:first-child) {
+    margin-right: auto;
+    margin-left: auto;
+}
+
+footer .social-logo-container {
+    background: #E6FFFA;
+    padding: 10px;
+    border-radius: 15px;
+    width: fit-content;
+}
+
+.phone {
+    font-family: var(--font-inter);
+    font-size: 25px;
 }
