chore: separate css into modules

--- a/src/styles/title.module.css
+++ b/src/styles/title.module.css
@@ -16,7 +16,7 @@
     white-space: pre-line;
 }
 
-.background-circle {
+.background_circle {
     position: relative;
     background: transparent;
     box-sizing: content-box;
