--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,6 +1,6 @@
 .footer {
     height: 415px;
-    width: 100%;
+    width: 1200px;
     display: flex;
     padding-top: 50px;
     flex-direction: row;
