--- a/src/styles/info.module.css
+++ b/src/styles/info.module.css
@@ -5,7 +5,6 @@
     margin-left: auto;
     margin-right: auto;
     width: 1200px;
-    max-width: 100%;
     align-items: center;
     gap: 65px;
     font-size: 60px;
@@ -13,8 +12,13 @@
 }
 .hero_image {
     opacity: 0;
-    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+    transition-duration: 1s; 
 }
+
+.hero_image:hover {
+    scale: 1.1;
+}
+
 
 .hero_image.visible {
     opacity: 1;
